# interconnect

./: CLAUDE.md  CONTEXT.md  Cargo.toml  README.md  TODO.md  flake.nix
.claude/: settings.json
.githooks/: pre-commit
crates/connectors/discord/: Cargo.toml
crates/connectors/fs/: Cargo.toml
crates/connectors/interconnect-connector-fs/src/: connector.rs  transport.rs  types.rs
crates/connectors/interconnect-connector-github/: Cargo.toml
crates/connectors/interconnect-connector-github/src/: connector.rs  lib.rs  transport.rs  types.rs
crates/connectors/interconnect-connector-irc/: Cargo.toml
crates/connectors/interconnect-connector-irc/src/: connector.rs  lib.rs  transport.rs  types.rs
crates/connectors/interconnect-connector-maillist/src/: connector.rs  transport.rs
crates/connectors/interconnect-connector-matrix/: Cargo.toml
crates/connectors/interconnect-connector-matrix/src/: connector.rs  lib.rs  transport.rs  types.rs
crates/connectors/interconnect-connector-signal/: Cargo.toml
crates/connectors/interconnect-connector-signal/src/: connector.rs  lib.rs  transport.rs  types.rs
crates/connectors/interconnect-connector-slack/: Cargo.toml
crates/connectors/interconnect-connector-slack/src/: connector.rs  lib.rs  types.rs
crates/connectors/interconnect-connector-sqlite/: Cargo.toml
crates/connectors/interconnect-connector-sqlite/src/: chat.rs  connector.rs  lib.rs  transport.rs  types.rs
crates/connectors/interconnect-connector-telegram/: Cargo.toml
crates/connectors/interconnect-connector-telegram/src/: connector.rs  lib.rs  transport.rs  types.rs
crates/connectors/interconnect-connector-whatsapp/: Cargo.toml
crates/connectors/interconnect-connector-whatsapp/src/: connector.rs  lib.rs  transport.rs  types.rs
crates/connectors/interconnect-connector-zulip/: Cargo.toml
crates/connectors/interconnect-connector-zulip/src/: transport.rs  types.rs
crates/connectors/maillist/: Cargo.toml
crates/connectors/maillist/src/: lib.rs  types.rs
crates/connectors/slack/src/: transport.rs
crates/connectors/zulip/src/: connector.rs  lib.rs
crates/interconnect-client/: Cargo.toml
crates/interconnect-client/src/: connection.rs  error.rs  lib.rs  transport.rs
crates/interconnect-connector-discord/: Cargo.toml
crates/interconnect-connector-discord/src/: connector.rs  lib.rs  transport.rs  types.rs
crates/interconnect-connector-fs/: Cargo.toml
crates/interconnect-connector-fs/src/: lib.rs
crates/interconnect-core/: Cargo.toml
crates/interconnect-core/src/: identity.rs  lib.rs  message.rs  transfer.rs  transport.rs
crates/interconnect-daemon/: Cargo.toml
crates/interconnect-daemon/src/: cli.rs  cli_main.rs  config.rs  daemon.rs  daemon_main.rs  protocol.rs  room.rs
crates/interconnect-daemon/src/preset/: claude.rs
docs/: agent-orchestration.md  architecture.md  daemon.md  design-decisions.md  import-policies.md  index.md  introduction.md  package.json  protocol.md  security.md  use-cases.md  why-interconnect.md
docs/.vitepress/: config.ts
examples/chat/: Cargo.toml
examples/chat/src/: main.rs  protocol.rs  server.rs
examples/forum/: Cargo.toml
examples/forum/src/: main.rs  protocol.rs  server.rs
examples/game/: Cargo.toml
examples/game/src/: main.rs  protocol.rs  server.rs  world.rs
examples/microblog/: Cargo.toml
examples/microblog/src/: main.rs  protocol.rs  server.rs
examples/process/: Cargo.toml
examples/process/src/: authority.rs  client.rs  main.rs  protocol.rs  server.rs
examples/webchat/: Cargo.toml
examples/webchat/src/: index.html  main.rs
