[workspace]
resolver = "2"
members = ["crates/interconnect-*", "crates/connectors/*", "examples/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/rhi-zone/interconnect"

[workspace.dependencies]
interconnect-core = { path = "crates/interconnect-core" }
interconnect-client = { path = "crates/interconnect-client" }
interconnect-connector-discord = { path = "crates/connectors/discord" }
interconnect-connector-fs = { path = "crates/connectors/fs" }
interconnect-connector-zulip = { path = "crates/connectors/zulip" }
interconnect-connector-slack = { path = "crates/connectors/slack" }
interconnect-connector-maillist = { path = "crates/connectors/maillist" }
interconnect-connector-irc = { path = "crates/connectors/interconnect-connector-irc" }
interconnect-connector-telegram = { path = "crates/connectors/interconnect-connector-telegram" }
interconnect-connector-matrix = { path = "crates/connectors/interconnect-connector-matrix" }

[profile.dev]
debug = 0
