[workspace]
resolver = "2"
members = ["crates/interconnect-*", "crates/connectors/*", "examples/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/rhi-zone/interconnect"

[workspace.dependencies]
interconnect-core = { path = "crates/interconnect-core" }
interconnect-daemon = { path = "crates/interconnect-daemon" }
interconnect-client = { path = "crates/interconnect-client" }
interconnect-connector-discord = { path = "crates/connectors/interconnect-connector-discord" }
interconnect-connector-fs = { path = "crates/connectors/interconnect-connector-fs" }
interconnect-connector-zulip = { path = "crates/connectors/interconnect-connector-zulip" }
interconnect-connector-slack = { path = "crates/connectors/interconnect-connector-slack" }
interconnect-connector-maillist = { path = "crates/connectors/interconnect-connector-maillist" }
interconnect-connector-irc = { path = "crates/connectors/interconnect-connector-irc" }
interconnect-connector-telegram = { path = "crates/connectors/interconnect-connector-telegram" }
interconnect-connector-matrix = { path = "crates/connectors/interconnect-connector-matrix" }
interconnect-connector-whatsapp = { path = "crates/connectors/interconnect-connector-whatsapp" }
interconnect-connector-signal = { path = "crates/connectors/interconnect-connector-signal" }
interconnect-connector-github = { path = "crates/connectors/interconnect-connector-github" }
interconnect-connector-sqlite = { path = "crates/connectors/interconnect-connector-sqlite" }

[profile.dev]
debug = 0
