[package]
name = "interconnect-connector-discord"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Discord connector for the Interconnect protocol"

[dependencies]
interconnect-core = { path = "../interconnect-core" }
interconnect-client = { path = "../interconnect-client" }
twilight-gateway = { version = "0.16", features = ["rustls-native-roots"] }
twilight-http = { version = "0.16", features = ["rustls-native-roots"] }
twilight-model = "0.16"
tokio = { version = "1", features = ["net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
