[package]
name = "interconnect-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Persistent daemon and CLI client for Interconnect"

[[bin]]
name = "interconnect-daemon"
path = "src/daemon_main.rs"

[[bin]]
name = "interconnect"
path = "src/cli_main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
