[package]
name = "interconnect-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Persistent daemon and CLI client for Interconnect"

[[bin]]
name = "interconnect-daemon"
path = "src/daemon_main.rs"

[[bin]]
name = "interconnect"
path = "src/cli_main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
interconnect-core.workspace = true
interconnect-connector-slack.workspace = true
interconnect-connector-discord.workspace = true
interconnect-connector-sqlite.workspace = true
interconnect-connector-telegram.workspace = true
interconnect-connector-matrix.workspace = true
interconnect-connector-irc.workspace = true
interconnect-connector-zulip.workspace = true
interconnect-connector-maillist.workspace = true
interconnect-connector-signal.workspace = true
interconnect-connector-github.workspace = true
interconnect-connector-whatsapp.workspace = true
interconnect-connector-fs.workspace = true
