[package]
name = "interconnect-example-process"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "process-server"
path = "src/main.rs"

[[bin]]
name = "process-client"
path = "src/client.rs"

[dependencies]
interconnect-core = { path = "../../crates/interconnect-core" }
interconnect-client = { path = "../../crates/interconnect-client" }
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
