[package]
name = "interconnect-connector-fs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Filesystem connector for the Interconnect protocol"

[dependencies]
interconnect-core.workspace = true
interconnect-client.workspace = true
notify = "6"
walkdir = "2"
tokio = { version = "1", features = ["fs", "rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
