[package]
name = "interconnect-connector-irc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "IRC connector for the Interconnect protocol"

[dependencies]
interconnect-core.workspace = true
interconnect-client.workspace = true
tokio = { version = "1", features = ["net", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
