[package]
name = "interconnect-connector-maillist"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Mailing list connector for the Interconnect protocol (Listmonk)"

[dependencies]
interconnect-core.workspace = true
interconnect-client.workspace = true
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["net", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
